# hydra

./: .gitignore  CMakeLists.txt  README.md  VESPA_LLM.md  block_names.txt  build.sh  genBOPCsv.py  genCsv.py  genHBPCsv.py  getBOPJSON.py  getHBPJSON.py  get_block_frequencies.py  get_hottest_block.py  jotaiMerlinTable.csv  package-lock.json  package.json  run.sh  runBOProfileProjection.sh  runBlockOrdering.sh  runCBenchCrossExperiments.sh  runExperiments.sh  runHBProfileProjection.sh  runHotBlock.sh  run_experiments.sh
Benchmark Scripts/: config.sh  nisse_profiler.sh  nisse_profiler_cbench.sh  no_profiler.sh  no_profiler_cbench.sh
Benchmark Scripts/Jotai/: get_results.py  nisse_all.sh  process_results.py
Benchmark Scripts/cBench/: get_results.py  nisse_all.sh  process_results.py
Benchmark/cBench/: all_compile  all_run__1_dataset  all_run__20_datasets
Benchmark_Scripts/: config.sh  nisse_profiler.sh  nisse_profiler_cbench.sh  no_profiler.sh  no_profiler_cbench.sh
Benchmark_Scripts/Jotai/: nisse_all.sh
Benchmark_Scripts/cBench/: nisse_all.sh  no_profile_all.sh  process_results.py
CSV Files/: jotaiMerlinTable.csv
CSV_Files/: jotaiMerlinTableOrdering.csv
Cross Experiments/dce/: runExperiment.sh
Cross Experiments/iv-licm/: runExperiment.sh
Cross Experiments/iv-licm-scfg/: genHBPCsv.py  runExperiment.sh  runHotBlock.sh
Experiments/Scripts/: collect_results.py  config.sh  extract_beetle_json.py  extract_llm_json.py  extract_llm_pred_json.py  extract_llm_proj_json.py  extract_vespa_json.py  gen_csv_report.py  gen_csvs.sh  gen_llm_pred_prompt.py  gen_llm_proj_prompt.py  gen_opt_csv_report.py  gen_summarized_opt_csv_report.py
JSON Files/: cBenchVespaPosOrdering.json  cBenchVespaPreOrdering.json  jotaiMerlinResults.json  jotaiPredictorBlock.json  jotaiPredictorOrdering.json  jotaiRandomBlock.json  jotaiRandomBlock2.json
JSON Scripts/: get_hottest_block.py
JSON Scripts/cBench/: get_hottest_block.py
JSON_Files/: cBenchNestedBlock.json  cBenchPredictorBlock.json  cBenchPredictorOrdering.json  cBenchRandomBlock.json  cBenchVespaPreBlock.json  jotaiNestedBlock.json  jotaiProfileOrdering.json  jotaiRandomOrdering.json
JSON_Scripts/: get_block_ordering.py
JSON_Scripts/Jotai/: print_json.py
cBench Scripts/: cBenchTable.csv  cBenchTableBlock.csv  cBenchTableOrdering.csv  genCsv.py  genHBPCsv.py  getBOPJSON.py  runBlockOrdering.sh  run_cbench.sh
cBench_Scripts/: genBOPCsv.py  getHBPJSON.py  runBlockOrdering.sh  run_cbench.sh
genaisrc/: .gitignore  predictor.genai.mts  projection.genai.mts
include/: BOPPredictor.h  BOPRandom.h  HBPNested.h  HBPPredictor.h  HBPRandom.h
include/BlockOrdering/: Ayupov.h  HashMatching.h  HistRegion.h  Hydra.h  Predictor.h  Profile.h  Random.h
include/HotBlock/: Nested.h  Predictor.h  Profile.h  Random.h
include/Utils/: OpcodeHistogram.h  SCC.h  WeightedProfileInference.h
lib/: BOPPredictor.cpp  BOPPredictorPlugin.cpp  BOPRandom.cpp  BOPRandomPlugin.cpp  HBPNested.cpp  HBPNestedPlugin.cpp  HBPPredictor.cpp  HBPPredictorPlugin.cpp  HBPRandom.cpp  HBPRandomPlugin.cpp
lib/HotBlock/: Nested.cpp  (+7 more)
(+3226 files in other folders)
